--- a/index.html
+++ b/index.html
@@ -73,6 +73,136 @@
                 </div>
               </div>
             </div>
+
+            <div class="blog">
+              <div class="blog_img">
+                <a href="#">
+                  <img src="images/blog-2.svg" alt="" />
+                </a>
+              </div>
+
+              <div class="blog_text">
+                <h2>
+                  <a href="#"
+                    >Lorem ipsum dolor sit amet consectetur adipisicing.</a
+                  >
+                </h2>
+                <div class="d_flex">
+                  <div class="category">App Design</div>
+                  <div class="date">7th October 2024</div>
+                </div>
+                <div class="author d_flex">
+                  <div class="author_image">
+                    <img src="images/profile-9.png" alt="" />
+                  </div>
+                  <div class="author_name">Kelvin</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="blog">
+              <div class="blog_img">
+                <a href="#">
+                  <img src="images/blog-3.svg" alt="" />
+                </a>
+              </div>
+
+              <div class="blog_text">
+                <h2>
+                  <a href="#"
+                    >Lorem ipsum dolor sit amet consectetur adipisicing.</a
+                  >
+                </h2>
+                <div class="d_flex">
+                  <div class="category">App Design</div>
+                  <div class="date">7th October 2024</div>
+                </div>
+                <div class="author d_flex">
+                  <div class="author_image">
+                    <img src="images/profile-9.png" alt="" />
+                  </div>
+                  <div class="author_name">Kelvin</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="blog">
+              <div class="blog_img">
+                <a href="#">
+                  <img src="images/blog-4.svg" alt="" />
+                </a>
+              </div>
+
+              <div class="blog_text">
+                <h2>
+                  <a href="#"
+                    >Lorem ipsum dolor sit amet consectetur adipisicing.</a
+                  >
+                </h2>
+                <div class="d_flex">
+                  <div class="category">App Design</div>
+                  <div class="date">7th October 2024</div>
+                </div>
+                <div class="author d_flex">
+                  <div class="author_image">
+                    <img src="images/profile-9.png" alt="" />
+                  </div>
+                  <div class="author_name">Kelvin</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="blog">
+              <div class="blog_img">
+                <a href="#">
+                  <img src="images/blog-5.svg" alt="" />
+                </a>
+              </div>
+
+              <div class="blog_text">
+                <h2>
+                  <a href="#"
+                    >Lorem ipsum dolor sit amet consectetur adipisicing.</a
+                  >
+                </h2>
+                <div class="d_flex">
+                  <div class="category">App Design</div>
+                  <div class="date">7th October 2024</div>
+                </div>
+                <div class="author d_flex">
+                  <div class="author_image">
+                    <img src="images/profile-9.png" alt="" />
+                  </div>
+                  <div class="author_name">Kelvin</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="blog">
+              <div class="blog_img">
+                <a href="#">
+                  <img src="images/blog-6.svg" alt="" />
+                </a>
+              </div>
+
+              <div class="blog_text">
+                <h2>
+                  <a href="#"
+                    >Lorem ipsum dolor sit amet consectetur adipisicing.</a
+                  >
+                </h2>
+                <div class="d_flex">
+                  <div class="category">App Design</div>
+                  <div class="date">7th October 2024</div>
+                </div>
+                <div class="author d_flex">
+                  <div class="author_image">
+                    <img src="images/profile-9.png" alt="" />
+                  </div>
+                  <div class="author_name">Kelvin</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
