Load more button & footer

--- a/index.html
+++ b/index.html
@@ -204,6 +204,9 @@
               </div>
             </div>
           </div>
+          <div class="load_btn">
+            <button class="load" id="load">Load more</button>
+          </div>
         </div>
 
         <!-- Ads -->
@@ -215,6 +218,16 @@
       </main>
 
       <!-- Footer -->
+      <footer id="footer" class="footer">
+        <div class="layout d_flex">
+          <p>Copyright &copy; 2024</p>
+          <div class="social">
+            <a href="#"><i class="bx bxl-instagram"></i></a>
+            <a href="#"><i class="bx bxl-youtube"></i></a>
+            <a href="#"><i class="bx bxl-facebook"></i></a>
+          </div>
+        </div>
+      </footer>
     </div>
     <!-- Script -->
     <script src="script.js"></script>
