--- a/index.html
+++ b/index.html
@@ -15,19 +15,15 @@
     <title>My Blog</title>
   </head>
   <body>
-    <!-- Preloader -->
-    <div class="preloader d_flex" id="loading">
-      <img src="images/loader.gif" alt="loader" />
-    </div>
     <div class="app">
       <!-- Navigation -->
       <header class="header" id="header">
         <nav class="navigation container d_flex">
           <a class="logo" href="#">Blog</a>
           <ul class="nav_list d_flex">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="#" class="checked">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
           </ul>
 
           <div class="hamburger">
