--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- Navigation -->
       <header class="header" id="header">
         <nav class="navigation container d_flex">
-          <a class="logo" href="#">Blog</a>
+          <a class="logo" href="index.html">Blog</a>
           <ul class="nav_list d_flex">
             <li><a href="#" class="checked">Home</a></li>
             <li><a href="about.html">About Us</a></li>
