Loading more blogs using js

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
           <div class="blog_layout container" id="blog_layout">
             <div class="blog">
               <div class="blog_img">
-                <a href="#">
+                <a href="details.html">
                   <img src="images/blog-1.svg" alt="" />
                 </a>
               </div>
 
               <div class="blog_text">
                 <h2>
-                  <a href="#"
+                  <a href="details.html"
                     >Lorem ipsum dolor sit amet consectetur adipisicing.</a
                   >
                 </h2>
@@ -72,14 +72,14 @@
 
             <div class="blog">
               <div class="blog_img">
-                <a href="#">
+                <a href="details.html">
                   <img src="images/blog-2.svg" alt="" />
                 </a>
               </div>
 
               <div class="blog_text">
                 <h2>
-                  <a href="#"
+                  <a href="details.html"
                     >Lorem ipsum dolor sit amet consectetur adipisicing.</a
                   >
                 </h2>
@@ -98,14 +98,14 @@
 
             <div class="blog">
               <div class="blog_img">
-                <a href="#">
+                <a href="details.html">
                   <img src="images/blog-3.svg" alt="" />
                 </a>
               </div>
 
               <div class="blog_text">
                 <h2>
-                  <a href="#"
+                  <a href="details.html"
                     >Lorem ipsum dolor sit amet consectetur adipisicing.</a
                   >
                 </h2>
@@ -124,14 +124,14 @@
 
             <div class="blog">
               <div class="blog_img">
-                <a href="#">
+                <a href="details.html">
                   <img src="images/blog-4.svg" alt="" />
                 </a>
               </div>
 
               <div class="blog_text">
                 <h2>
-                  <a href="#"
+                  <a href="details.html"
                     >Lorem ipsum dolor sit amet consectetur adipisicing.</a
                   >
                 </h2>
@@ -150,14 +150,14 @@
 
             <div class="blog">
               <div class="blog_img">
-                <a href="#">
+                <a href="details.html">
                   <img src="images/blog-5.svg" alt="" />
                 </a>
               </div>
 
               <div class="blog_text">
                 <h2>
-                  <a href="#"
+                  <a href="details.html"
                     >Lorem ipsum dolor sit amet consectetur adipisicing.</a
                   >
                 </h2>
@@ -176,14 +176,118 @@
 
             <div class="blog">
               <div class="blog_img">
-                <a href="#">
+                <a href="details.html">
                   <img src="images/blog-6.svg" alt="" />
                 </a>
               </div>
 
               <div class="blog_text">
                 <h2>
-                  <a href="#"
+                  <a href="details.html"
+                    >Lorem ipsum dolor sit amet consectetur adipisicing.</a
+                  >
+                </h2>
+                <div class="d_flex">
+                  <div class="category">App Design</div>
+                  <div class="date">7th October 2024</div>
+                </div>
+                <div class="author d_flex">
+                  <div class="author_image">
+                    <img src="images/profile-9.png" alt="" />
+                  </div>
+                  <div class="author_name">Kelvin</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="blog">
+              <div class="blog_img">
+                <a href="details.html">
+                  <img src="images/blog-1.svg" alt="" />
+                </a>
+              </div>
+
+              <div class="blog_text">
+                <h2>
+                  <a href="details.html"
+                    >Lorem ipsum dolor sit amet consectetur adipisicing.</a
+                  >
+                </h2>
+                <div class="d_flex">
+                  <div class="category">App Design</div>
+                  <div class="date">7th October 2024</div>
+                </div>
+                <div class="author d_flex">
+                  <div class="author_image">
+                    <img src="images/profile-9.png" alt="" />
+                  </div>
+                  <div class="author_name">Kelvin</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="blog">
+              <div class="blog_img">
+                <a href="details.html">
+                  <img src="images/blog-2.svg" alt="" />
+                </a>
+              </div>
+
+              <div class="blog_text">
+                <h2>
+                  <a href="details.html"
+                    >Lorem ipsum dolor sit amet consectetur adipisicing.</a
+                  >
+                </h2>
+                <div class="d_flex">
+                  <div class="category">App Design</div>
+                  <div class="date">7th October 2024</div>
+                </div>
+                <div class="author d_flex">
+                  <div class="author_image">
+                    <img src="images/profile-9.png" alt="" />
+                  </div>
+                  <div class="author_name">Kelvin</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="blog">
+              <div class="blog_img">
+                <a href="details.html">
+                  <img src="images/blog-3.svg" alt="" />
+                </a>
+              </div>
+
+              <div class="blog_text">
+                <h2>
+                  <a href="details.html"
+                    >Lorem ipsum dolor sit amet consectetur adipisicing.</a
+                  >
+                </h2>
+                <div class="d_flex">
+                  <div class="category">App Design</div>
+                  <div class="date">7th October 2024</div>
+                </div>
+                <div class="author d_flex">
+                  <div class="author_image">
+                    <img src="images/profile-9.png" alt="" />
+                  </div>
+                  <div class="author_name">Kelvin</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="blog">
+              <div class="blog_img">
+                <a href="details.html">
+                  <img src="images/blog-4.svg" alt="" />
+                </a>
+              </div>
+
+              <div class="blog_text">
+                <h2>
+                  <a href="details.html"
                     >Lorem ipsum dolor sit amet consectetur adipisicing.</a
                   >
                 </h2>
